[v6.0]U 反射获取扩展 redis注册中心